<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.accerti.hypergaragesale.View.Activity_DetailPost">

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:hint="@string/title"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textColor="@color/cast_expanded_controller_background_color" />
    <TextView
        android:id="@+id/txtViewPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:inputType="numberDecimal"
        android:hint="@string/price"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="viewStart"
        android:textColor="@color/cast_expanded_controller_background_color" />
    <TextView
        android:id="@+id/txtViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:hint="@string/description" />

    <ImageView
        android:id="@+id/ImageDetail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@android:drawable/ic_menu_camera" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:context="br.com.accerti.hypergaragesale.View.Activity_DetailPost"
        map:cameraTilt="30"
        map:cameraZoom="10"
        map:mapType="normal"
        map:uiRotateGestures="true"
        map:uiTiltGestures="true"
        map:uiZoomControls="true"
        map:uiZoomGestures="true"/>
</LinearLayout>
